--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ div {
 }
 
 .green {
-    background-color: #008500;
+    background-color: #00EB00;
     text-align: left;
     margin-right: 50px;
     border-top: 2px solid #ffffff;
